# rust-papertrail-lib

./: Cargo.toml  README.md
examples/: example.rs
src/: file_logger.rs  lib.rs
